--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="cap_button">Your Generated Caption:</string>
     <string name="another">Generate another caption</string>
     <string name="post">Post to Instagram</string>
+    <string name="copy">Copy to Clipboard</string>
 </resources>
